corrected sidebar height issue on smaller laptop height screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,7 +295,8 @@ figcaption {
 }
 
 #sidebar ul li {
-  margin: 20px 0;
+  margin: 8px 0;
+  font-size: 1rem;
 }
 
 /*#sidebar ul li a {
